# norge_events_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: README.md  api_types.rs  command_options.rs  commands.rs  discord_event.rs  fab_event.rs  lss_api.rs  main.rs  structs.rs  tests.rs  tournament_event.rs
src/api_types/: city.rs  country.rs  country_city.rs  event_type.rs  format.rs
src/commands/: error_handler.rs  events.rs  help.rs  post.rs
src/lss_api/: api_response.rs  fab_event.rs
src/structs/: city.rs  country.rs  country_city.rs  event_type.rs  format.rs
src/tests/: api_response.rs  fab_event.rs  tournament_event.rs
