[package]
name = "norge_events_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
poise = "0.6.1"
serenity = "0.12.5"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
