[package]
name = "norge_events_bot"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
poise = "0.6.1"
serenity = { version = "0.12.5", features = ["chrono", "model"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
